--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8" />
   <title>particle.play</title>
   <link rel="icon" type="image/x-icon" href="particleplay.ico">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="particle.play">
+  <link rel="apple-touch-icon" href="particleplay.ico"> <!-- or your preferred icon -->
+  <link rel="manifest" href="/manifest.json">
+
+
   <style>
     html, body {
       margin: 0;
