--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="particle.play">
-  <link rel="apple-touch-icon" href="particleplay.ico"> <!-- or your preferred icon -->
+  <link rel="apple-touch-icon" href="particleplay_highres.png"> <!-- or your preferred icon -->
   <link rel="manifest" href="/manifest.json">
 
 
